@@ -71,7 +71,9 @@ checkUnused = chain 0
 		return []
 	findunused False = do
 		showAction "checking for unused data"
-		excludeReferenced =<< getKeysPresent
+		-- InAnnex, not InRepository because if a direct mode
+		-- file exists, it is obviously not unused.
+		excludeReferenced =<< getKeysPresent InAnnex
 	chain _ [] = next $ return True
 	chain v (a:as) = do
 		v' <- a v
